# gpm-datacube

./: .gitignore  CMakeLists.txt
notes/: notes_17feb_1500.md
src/: main.cpp
src/benchmark/: benchmark_runner.h  comprehensive_benchmark.h  csv_writer.h  cube_export.h  olap_benchmark.h  size_sweep_benchmark.h  slice_benchmark.h  slice_full_sweep.h  synthetic_cube.h
src/builder/: default_cube_builder.cpp  default_cube_builder.h  omp_sc_builder.cpp  omp_sc_builder.h  parallel_simple_cube_builder.cpp  parallel_simple_cube_builder.h  simple_cube_builder.cpp  simple_cube_builder.h
src/cube/: datacube.h  simple_cube.h
src/loader/: zarr_loader.cpp  zarr_loader.h
src/olap/: omp_operations.h  operations.h  parallel_operations.h  simple_operations.h
src/utils/: timer.h
tests/: test_datacube.cpp
